traversal.snake.Snake.scala.error
Compilation error:
Snake:19: warning: enclosing method testmur has result type Unit: return value discarded
  return x
  ^Snake:33: error: value unary_! is not a member of Unit
  while (!testmur()){
         ^